# SkyDream

./: .gitignore  CMakeLists.txt
code/: CMakeLists.txt
code/Executables/: CMakeLists.txt
code/Executables/Asteorhythm/: AsteorhythmModule.cpp  AsteorhythmModule.h  CMakeLists.txt  Precompile.h  main.cpp
code/Executables/DiffractionProto/: CMakeLists.txt  DiffractionProtoModule.cpp  DiffractionProtoModule.h  MainScreen.cpp  MainScreen.h  Precompile.h  Screen.cpp  Screen.h  ScreenManager.cpp  ScreenManager.h  SecondaryScreen.cpp  SecondaryScreen.h  StateManager.cpp  StateManager.h  TangiblesManager.cpp  TangiblesManager.h  main.cpp
code/Executables/LocalLLMTest/: CMakeLists.txt  Precompile.h  common.cpp  common.h  phi3.cpp
code/Executables/NeatDoublePoleBalancing/: CMakeLists.txt  CartPole.cpp  CartPole.h  main.cpp
code/Executables/NeatPoleBalancing/: CMakeLists.txt  main.cpp
code/Executables/NeatPoleBalancing2/: CMakeLists.txt  Precompile.h  main.cpp
code/Executables/NeatXOR/: CMakeLists.txt  main.cpp
code/Executables/TextToSpeechTest/: CMakeLists.txt  main.cpp
code/Frameworks/: CMakeLists.txt
code/Frameworks/Core/: CMakeLists.txt
code/Frameworks/Core/private/: Core_Assert.cpp  Core_CommandLine.cpp  Core_EntityCameraComponent.cpp  Core_EntityModule.cpp  Core_Facade.cpp  Core_FileHelpers.cpp  Core_InputModule.cpp  Core_Log.cpp  Core_Module.cpp  Core_ModuleManager.cpp  Core_ModuleManager.h  Core_Thread.cpp  Core_TimeModule.cpp  Core_Utils.cpp  Core_WindowModule.cpp
code/Frameworks/Core/public/: Core_Assert.h  Core_CommandLine.h  Core_Defines.h  Core_Entity.h  Core_EntityCameraComponent.h  Core_EntityModule.h  Core_EntityTransformComponent.h  Core_Facade.h  Core_FileHelpers.h  Core_InputModule.h  Core_Log.h  Core_Module.h  Core_SharedPtr.h  Core_SlotArray.h  Core_Thread.h  Core_TimeModule.h  Core_Utils.h  Core_WindowModule.h  Core_glm.h
code/Modules/: CMakeLists.txt
code/Modules/Debugger/: CMakeLists.txt
code/Modules/Debugger/private/: Debugger_Module.cpp  Debugger_Precompile.h
code/Modules/Debugger/public/: Debugger_Module.h
code/Modules/Diffraction/: CMakeLists.txt
code/Modules/Diffraction/private/: Diffraction_LightSpectrum.cpp  Diffraction_LightSpectrum.h  Diffraction_Module.cpp  Diffraction_Precompile.h  Diffraction_Renderer.cpp  Diffraction_Renderer.h
code/Modules/Diffraction/public/: Diffraction_Data.h  Diffraction_Module.h
code/Modules/Editor/: CMakeLists.txt
code/Modules/Editor/private/: Editor_EditorModule.cpp  Editor_GraphEditorCanvas.cpp  Editor_GraphEditorCanvas.h
code/Modules/Editor/public/: Editor_EditorModule.h
code/Modules/Localization/: CMakeLists.txt
code/Modules/Localization/private/: Localization_Module.cpp
code/Modules/Localization/public/: Localization_Module.h
code/Modules/Render/: CMakeLists.txt
code/Modules/Render/private/: Render_Buffer.cpp  Render_Buffer.h  Render_Camera.cpp  Render_Camera.h  Render_Debug.cpp  Render_Debug.h  Render_DeferredRenderer.cpp  Render_DeferredRenderer.h  Render_Device.cpp  Render_Device.h  Render_DiffractionRenderer.cpp  Render_DiffractionRenderer.h  Render_EntityRenderComponent.cpp  Render_Gui.cpp  Render_Gui.h  Render_GuiRenderer.cpp  Render_GuiRenderer.h  Render_Helpers.cpp  Render_Helpers.h  Render_ImGuiHelper.cpp  Render_ImGuiHelper.h  Render_Image.cpp  Render_Image.h  Render_Model.cpp  Render_Model.h  Render_PointLightsSet.cpp  Render_PointLightsSet.h  Render_Precompile.cpp  Render_Precompile.h  Render_RenderCore.cpp  Render_RenderCore.h  Render_RenderModule.cpp  Render_RenderTarget.cpp  Render_RenderTarget.h  Render_Renderer.cpp  Render_Renderer.h  Render_Resource.cpp  Render_Resource.h  Render_SampleTexturedRectangleRenderer.cpp  Render_SampleTexturedRectangleRenderer.h  (+8 more)
code/Modules/Render/public/: Render_EntityRenderComponent.h  Render_Fonts.h  Render_RenderModule.h
data/Executables/Asteorhythm/Models/Asteroid01/: Asteroid01.gltf
data/Executables/Asteorhythm/Models/TestCube/: TestCube.glb  TestCube.gltf
data/Executables/DiffractionProto/Configs/: Diffraction.json  Monitors.json  Tangibles.json  Tangibles_.json
data/Executables/DiffractionProto/Localization/: Diffraction.en  Diffraction.fr
data/Executables/LocalLLMTest/: .gitignore  dowload_model.bat
data/Executables/Neat/: DoublePoleBalancing  DoublePoleBalancing_100  PoleBalancing  PoleBalancing2  PoleResetting  Xor
data/Frameworks/Localization/: Core.en  Core.fr
data/Frameworks/Models/Donut/: Donut.gltf
data/Frameworks/Shaders/: Composition.frag  Composition_frag.spv  DebugForward.frag  DebugForward.vert  DebugForward_frag.spv  DebugForward_vert.spv  Fullscreen.vert  GBuffer.frag  GBuffer.vert  GBuffer_frag.spv  GBuffer_vert.spv  Sample_TexturedRectangle.frag  Sample_TexturedRectangle.vert  Sample_TexturedRectangle_frag.spv  Sample_TexturedRectangle_vert.spv  Transparent.frag  Transparent.vert  Transparent_frag.spv  Transparent_vert.spv
data/Modules/Diffraction/Shaders/: Diffraction.include  Interference.include  PointLaser.frag  PointLaser_frag.spv  RoundHolesInterference.frag  RoundHolesInterference_frag.spv  SlitsInterference.frag  SlitsInterference_frag.spv  SquareHoleDiffraction.frag  SquareHoleDiffraction_frag.spv
source/Executables/Asteorhythm/Asteroid01/: Asteroid01.blend  Asteroid01.blend1
source/Frameworks/Donut/: tuto.blend  tuto.blend1
tools/: ShaderCompile.bat  ShaderCompile_Diffraction.lnk  ShaderCompile_Frameworks.lnk
